styles/index.css
/* ... */
table > thead::before, table > thead::after {
  display: block;
  background: inherit;
}
table > tfoot {
  z-index: 0;
  display: block;
  position: relative;
  background: inherit;
}
table > tfoot::before, table > tfoot::after {
  display: block;
  background: inherit;
}
table > tbody {
  z-index: 1;
  display: block;
  position: relative;
  background: inherit;
}
table > tbody::before, table > tbody::after {
  display: block;
  background: inherit;
  border: solid currentColor;
  border-width: 0.1618em 0;
}
tbody tr { counter-increment: rows }
tbody tr:nth-child(even) { background: inherit }
tbody tr::before {
  opacity: 0.3;
  content: counter(rows) '.';
}
tbody tr::after { content: '\2800' }
tbody tr:hover  { outline: 0.2ch solid currentColor }
tbody tr:hover::before { opacity: 1.0 }
tbody tr:hover::after  { content: '◀' }

tbody tr:hover td:not(:hover) { opacity: 50% }

abbr[title] { cursor: help }





/* CSS3 Lists
  https://drafts.csswg.org/css-lists-3
  https://perishablepress.com/sexy-html-list-tricks
  Styling lists - https://developer.mozilla.org/en-US/docs/Learn/CSS/Styling_text/Styling_lists

  ::marker
  - https://drafts.csswg.org/css-pseudo/#marker-pseudo
  - https://drafts.csswg.org/css-lists-3/#marker-properties
  - https://css-tricks.com/everything-you-need-to-know-about-the-gap-after-the-list-marker
*/
::marker {
  color: inherit;
  font-size: inherit;
}
[role=feed] {
  max-height: 25em;
  overflow-x: auto;
  border: 0.1ch solid;
  counter-reset: header;
}
[role=feed] article { border: inherit }
[role=feed]:hover article { opacity: .5 }
[role=feed]:hover article:hover { opacity: 1 }
:is( ol, ul ):is( [role=none], [role=presentation] ) :is( ol, ul )
  { list-style: inherit }

dl, ol, ul { background: rgba(255,255,255,0.5) }
dd > :is( dl, ol, ul ) {
  max-width: unset;
  background: inherit;
  margin: 0 .5ch;
}
details :is( details, dl, ol, ul ) { margin-bottom: unset }

nav > dl, nav > ol, nav > ul {
  margin: var(--margin-collapse-bugfix) 0;
  padding: var(--margin-collapse-bugfix) 0;
}

nav > dl::before, nav > ol::before, nav > ul::before ,
nav > dl::after, nav > ol::after, nav > ul::after  {
  margin: 1ch;
  content: '+';
  display: block;
  text-indent: 1ch;
  background: inherit;
}
aside dl, aside dl > *,
aside ol, aside ol > *,
aside ul, aside ul > *,
footer dl, footer dl > *,
footer ol, footer ol > *,
footer ul, footer ul > *
  { background: inherit }
dl {
  /* border-radius: 0.618ch; */
  counter-reset: term 0;
}
ul {
  margin-left: 2em;
  width: calc(100% - 2em - 1ch);
}
ol {}
ol[type=i] { unicode-bidi: embed }
dd, dt, li {
  -webkit-user-select: all;
  user-select: all;
}
dd {
  background: inherit;
  border-radius: inherit;
}
dd[role=definition] {
  counter-increment: definition;
}
dt[role=term]::before,
dd[role=definition]::before {
  font-size: large;
  font-weight: bolder;
  margin-right: 0.5ch;
}
dd[role=definition]::before {
  vertical-align: top;
  content: counter(definition) ':';
}
dd[role=definition] > :is( dl, ol, ul ) {
  margin-left: 2em;
  /* display: inline-block; */
  list-style-position: inside;
}
dt {
  counter-reset: definition 0;
}
dt[role=term] {
  counter-increment: term;
  border-bottom: 0.1ch solid;
}
dt[role=term]::before {
  content: counter(term) '.';
}
li {}
li li {}
:where( ol, ul ) > li {
  padding: 0 0.5ch;
}
ul > li {}
ol > li {
  /* list-style-type: list; */
}
ul > li::after,
ol > li::after {}
ul > li::after {
  /* padding: 0 0.5ch; */
}

/**** COUNTERS *******
  - https://w3.org/TR/predefined-counter-styles
  - https://developer.mozilla.org/en-US/docs/Web/CSS/counters
  - https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style
  - Example Demo - https://mdn.github.io/css-examples/counter-style-demo
  - https://css-tricks.com/some-things-you-might-not-know-about-custom-counter-styles
*/
@counter-style header {
  pad: '0' 3; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/pad */
  speak-as: ordered; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/speak-as */
  suffix: ') '; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/suffix */
  system: numeric; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/system */
  symbols: "0" "1" "2" "4" "5" "6" "7" "8" "9";
/*
  system: cyclic;
  system: numeric;
  system: symbolic;
  system: additive;
  system: alphabetic;

  Combined values
  system: fixed 3;
  system: extends decimal;
  */
  system: extends decimal-leading-zero;
  fallback: decimal-leading-zero; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/fallback */
}
@counter-style ordered {
  pad: '0' 2; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/pad */
  speak-as: ordered; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/speak-as */
  suffix: ') '; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/suffix */
  system: fixed; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/system */
  system: cyclic;
  system: numeric;
  system: symbolic;
  system: additive;
  system: alphabetic;
  /* Combined values
  system: fixed 3;
  system: extends decimal;
  */
  system: extends decimal-leading-zero;
  fallback: decimal-leading-zero; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/fallback */
}
/* ... */

